--- a/hr-api-gateway-zuul/src/main/resources/application.properties
+++ b/hr-api-gateway-zuul/src/main/resources/application.properties
@@ -3,6 +3,11 @@ server.port=8765
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
+#	Timeout Ribbon and Hystrix
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
+ribbon.ConnectTimeout=10000
+ribbon.ReadTimeout=20000
+
 #	Route Worker
 zuul.routes.worker.service-id=hr-worker
 zuul.routes.worker.path=/hr-worker/**
