--- a/hr-config-server/src/main/resources/application.properties
+++ b/hr-config-server/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.cloud.config.server.git.default-label=master
 server.port=8888
 
 spring.cloud.config.server.git.uri=https://github.com/RodrigoLee56/ms-course-configs
+spring.cloud.config.server.git.username=${GITHUB_USERNAME:rr}
+spring.cloud.config.server.git.password=${GITHUB_PASSWORD:123456}
