--- a/hr-api-gateway-zuul/src/main/resources/application.properties
+++ b/hr-api-gateway-zuul/src/main/resources/application.properties
@@ -15,3 +15,7 @@ zuul.routes.worker.path=/hr-worker/**
 #	Route Payroll
 zuul.routes.payroll.service-id=hr-payroll
 zuul.routes.payroll.path=/hr-payroll/**
+
+#	Route User
+zuul.routes.user.service-id=hr-user
+zuul.routes.user.path=/hr-user/**
